Se agregaron las imagenes en svg, se cambian los datos de usuario, se corrigen links del footer, y se actualiza el skillset y experiencia

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <img class="circle" src="assets/img/logos/large.png" alt="logo large" />
-      <h1>Tu nombre</h1>
+      <h1>Christian Servin</h1>
       <hr />
       <h2>Desarrollador Frontend</h2>
       <video autoplay loop muted>
@@ -45,7 +45,7 @@
             src="assets/img/logos/small.png"
             alt="small logo"
           />
-          <span>Tu nombre <small>Desarrollador Frontend</small></span>
+          <span>Christian Servin <small>Desarrollador Frontend</small></span>
         </a>
         <button id="hamburger">☰</button>
       </div>
@@ -80,37 +80,41 @@
         <hr />
         <div>
           <div>
-            <img src="assets/img/skillset/html.svg" />
+            <img src="assets/img/skillset/html-1.svg" />
             <span class="tooltip">HTML</span>
           </div>
           <div>
-            <img src="assets/img/skillset/css.svg" />
+            <img src="assets/img/skillset/css-3.svg" />
             <span class="tooltip">CSS</span>
           </div>
           <div>
-            <img src="assets/img/skillset/js.svg" />
+            <img src="assets/img/skillset/javascript-1.svg" />
             <span class="tooltip">Javascript</span>
           </div>
           <div>
-            <img src="assets/img/skillset/git.svg" />
+            <img src="assets/img/skillset/git-icon.svg" />
             <span class="tooltip">GIT</span>
           </div>
           <div>
-            <img src="assets/img/skillset/npm.svg" />
+            <img src="assets/img/skillset/github-icon-1.svg" />
+            <span class="tooltip">github</span>
+          </div>
+          <div>
+            <img src="assets/img/skillset/npm-2.svg" />
             <span class="tooltip">npm</span>
           </div>
           <div>
-            <img src="assets/img/skillset/bash.svg" />
+            <img src="assets/img/skillset/bash-2.svg"/>
             <span class="tooltip">bash</span>
           </div>
-          <div>
+        <!--   <div>
             <img src="assets/img/skillset/node.svg" />
             <span class="tooltip">Node.js</span>
           </div>
           <div>
             <img src="assets/img/skillset/react.svg" />
             <span class="tooltip">React</span>
-          </div>
+          </div> -->
         </div>
       </section>
       <section id="experience">
@@ -118,20 +122,12 @@
         <hr />
         <div>
           <a data-modal-id="myModal">
-            <img src="assets/img/experience/1.svg" />
-            <h4>Trabajo 1</h4>
+            <img src="assets/img/experience/pemex-1.svg" />
+            <h4>PEMEX</h4>
           </a>
-          <a>
-            <img src="assets/img/experience/2.svg" />
-            <h4>Trabajo 2</h4>
-          </a>
-          <a>
-            <img src="assets/img/experience/3.svg" />
-            <h4>Trabajo 3</h4>
-          </a>
-          <a>
-            <img src="assets/img/experience/4.svg" />
-            <h4>Trabajo 4</h4>
+          <a data-modal-id="myModal">
+            <img src="assets/img/experience/x-2.svg" />
+            <h4>Academia X</h4>
           </a>
         </div>
       </section>
@@ -151,21 +147,18 @@
           <button type="submit">Send</button>
         </form>
         <nav id="social-media">
-          <a href="https://www.linkedin.com/in/xavier-reyes-ochoa/">
+          <a href="https://www.linkedin.com/in/christian-servin-ruiz/" target="_blank">
             <img id="linkedin" src="assets/img/social/linkedin.png" />
           </a>
-          <a href="https://github.com/xrochoa">
+          <a href="https://github.com/ChristianServinRGithub" target="_blank">
             <img id="github" src="assets/img/social/github.png" />
-          </a>
-          <a href="https://www.programadorx.com">
-            <img id="youtube" src="assets/img/social/youtube.png" />
           </a>
         </nav>
       </section>
     </main>
     <footer>
       <small
-        >Developed and designed by Tu nombre. ©2021. All rights reserved.</small
+        >Developed and designed by Christian Servin. ©2024. All rights reserved.</small
       >
     </footer>
     <!-- Modal -->
