--- a/index.html
+++ b/index.html
@@ -5,25 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Tu nombre | Portafolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
       type="text/css"
-    />
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/utils.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/sections.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/header.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/nav.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/skillset.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/experience.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/contact.css" />
-    <link
-      rel="stylesheet"
-      href="./node_modules/eins-modal/dist/css/eins-modal-plain.min.css"
     />
   </head>
 
@@ -97,7 +82,7 @@
           </div>
           <div>
             <img src="assets/img/skillset/github-icon-1.svg" />
-            <span class="tooltip">github</span>
+            <span class="tooltip">Github</span>
           </div>
           <div>
             <img src="assets/img/skillset/npm-2.svg" />
@@ -171,8 +156,5 @@
         <button class="eins-modal-close-button">OK</button>
       </div>
     </div>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/fixed.js"></script>
-    <script src="./node_modules/eins-modal/dist/js/eins-modal-plain.min.js"></script>
   </body>
 </html>
